gcp/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ing
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2347
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: seedimage-svc
      #       port:
      #         number: 80
